syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.api.zappwidget.news";

package com.glance.analytics.spaces.client.api.zappwidget.news;

message TopStories{
  oneof extras{
    ViewMore view_more = 1;
    SetPreferences set_preferences = 2;
    TabClick tab_click = 3;
  }
}

message ViewMore{
}

message SetPreferences{
}

message TabClick{
}
